--- a/.github/workflows/deb.yml
+++ b/.github/workflows/deb.yml
@@ -9,8 +9,15 @@ jobs:
    - uses: actions/checkout@v3
      with:
       path: in
+   - uses: actions/checkout@master
+     with:
+      repository: colin-i/sync
+      path: in2
+      ref: actionswf
    - name: Run a multi-line script
      run: |
+      mv in2/debian/patches in/debian/patches
+      mv in2/.pc in/.pc
       sudo dpkg --add-architecture i386
       if [ -z "`dpkg -s devscripts>/dev/null 2>&1 && echo x`" ]; then
        sudo add-apt-repository -y ppa:colin-i/ppa
