--- a/src/Makefile
+++ b/src/Makefile
@@ -53,10 +53,10 @@ libname=${restofname}${name}
 
 $(eval obs = )
 $(eval eobs = )
-$(foreach var,$(expitems),$(eval eobs += ${items_prefix}${var}.o))
+$(foreach var,$(expitems),$(eval eobs += ${items_prefix}${var}.e.o))
 $(foreach var,$(items),$(eval obs += ${items_prefix}${var}.o))
 $(eval logs = )
-$(foreach var,$(expitems),$(eval logs += ${items_prefix}${var}.eoc.log))
+$(foreach var,$(expitems),$(eval logs += ${items_prefix}${var}.e.oc.log))
 $(foreach var,$(items),$(eval logs += ${items_prefix}${var}.oc.log))
 
 strippy=ostriputil
@@ -91,7 +91,7 @@ ${libname}: ${name}
 else
 ${libname}: ${name}
 	$(eval strp = )
-	$(foreach var,$(expitems),$(eval strp += ${items_prefix}${var}.eoc.log ${items_prefix}${var}.o))
+	$(foreach var,$(expitems),$(eval strp += ${items_prefix}${var}.e.oc.log ${items_prefix}${var}.o))
 	$(foreach var,$(items),$(eval strp += ${items_prefix}${var}.oc.log ${items_prefix}${var}.o))
 	${OSTRIP} ${name} ${strp}
 	#if [ ! -e "./strip.py" ]; then wget https://raw.githubusercontent.com/colin-i/o/master/ostrip/strip.py; fi
@@ -109,7 +109,7 @@ endif
 
 %.o: %.oc
 	${OCOMP} $< ${OFLAGS}
-%.o: %.eoc
+%.o: %.e.oc
 	${OCOMP} $< ${OFLAGS}
 
 ounused:
