--- a/example/Makefile
+++ b/example/Makefile
@@ -25,6 +25,10 @@ else
 	OFLAGS += underscore_pref 1
 	ifdef ldprefer
 		OFLAGS += include_sec 1
+	else
+		ifeq (${conv_64},1)
+			OFLAGS += include_sec 1
+		endif
 	endif
 	#exit_end 1 #same problem as ocompiler, even at qemu-amd64
 	#endif
@@ -63,6 +67,7 @@ link:
 		fi \
 	fi
 #launchpad amd64 is segmentation with ld instead of cc
+#				$(CC) ${linkerflags} -m32 ${name}.o -o ${name} -L../src -l:${libname}; \
 
 exe:
 	if [ "${platform}" = "lin" ]; then \
