debug_log separated

--- a/example/Makefile
+++ b/example/Makefile
@@ -73,7 +73,7 @@ exe:
 	if [ "${platform}" = "lin" ]; then \
 		LD_LIBRARY_PATH=../src ${launcher} ./${name} =; \
 	fi
-#\? is 0x3f, inside -0x30, 0 is 0x30, \; to 0xb, = is 0xd
+#\? is 0x3f log,alt,titles,x , inside -0x30, 0 is 0x30, \; to 0xb log,alt,x , = is 0xd log,titles,x
 
 %: %.oc
 	${OCOMP} $< ${OFLAGS} ${OFLAGSEXTRA}
