--- a/oad/Makefile
+++ b/oad/Makefile
@@ -37,12 +37,12 @@ ${libname}: common.h ${exte} main.o
 	${OLINK} main.oc.log intern.oc.log
 	$(CC) ${linkerflags} -shared $(word 3,$^) -o ${libname} -L. -l:${exte} -Wl,--exclude-libs ${exte}
 	# -l:intern.o ? is ok but exclude-libs intern.o/...a will not exclude
-	# `pkg-config --libs gtk4`
 
 %.o: %.oc
 	${OCOMP} $< ${OFLAGS}
 	${OCONV} $<.x
 	$(CC) -c -w ${compilerflags} $*.c
+	#-Wimplicit-function-declaration is good but anyway when making .x, ocompiler is also checking for this error
 
 clean:
 	-rm -f common.oh.log common.oh.x common.oh common.h
