--- a/.github/workflows/rel.yml
+++ b/.github/workflows/rel.yml
@@ -31,11 +31,19 @@ jobs:
       name=`cat debian/changelog | head -1 | grep -o ^[^\ ]*`
       echo "proj=${name}" >> $GITHUB_ENV
    - name: Upload Release Asset
-     uses: actions/upload-release-asset@v1
-     env:
-      GITHUB_TOKEN: ${{ secrets.PAT }}
+     uses: svenstaro/upload-release-action@v2
      with:
-      upload_url: https://uploads.github.com/repos/colin-i/test/releases/67484178/assets{?name,label}
-      asset_path: ./1.txt
+      repo_name: colin-i/test
+      repo_token: ${{ secrets.PAT }}
+      file: ./1.txt
       asset_name: ${{ env.proj }}
-      asset_content_type: text/plain
+      tag: 1.5
+      overwrite: true
+#     uses: actions/upload-release-asset@v1
+#     env:
+#      GITHUB_TOKEN: ${{ secrets.PAT }}
+#     with:
+#      upload_url: https://uploads.github.com/repos/colin-i/test/releases/67484178/assets{?name,label}
+#      asset_path: ./1.txt
+#      asset_name: ${{ env.proj }}
+#      asset_content_type: text/plain
