--- a/oad/Makefile
+++ b/oad/Makefile
@@ -24,7 +24,7 @@ re:
 
 xlog=../include/xlog.
 
-items=intern compare frame string
+items=intern compare frame string branch
 #$(eval subobjects = )
 $(foreach var,$(items),$(eval subobjects += ${var}.o))
 #$(eval sublogs = )
