--- a/oad/Makefile
+++ b/oad/Makefile
@@ -29,7 +29,7 @@ re:
 
 xlog=../include/xlog.
 
-items=intern compare frame string branch sbranch
+items=intern compare frame string branch
 #$(eval subobjects = )
 $(foreach var,$(items),$(eval subobjects += ${var}.o))
 #$(eval sublogs = )
