--- a/debian/rules
+++ b/debian/rules
@@ -10,12 +10,16 @@ export DH_VERBOSE = 1
 # --with autoreconf
 
 override_dh_auto_install:
+	echo oad/oadbgdata.h usr/include/libactionswf/ > debian/libactionswf-dev.install
+	echo oad/oadbgdatas.h usr/include/libactionswf/ >> debian/libactionswf-dev.install
+
+	#these must transition to otoc
+	#echo include/actionswf.h usr/include/libactionswf/ >> debian/libactionswf-dev.install
+	#echo dev/import.h usr/include/libactionswf/ >> debian/libactionswf-dev.install
+
+	#same as ocompiler, when adding another one, make install are useless
+	echo oaalternative usr/bin/ > debian/actionswf.install
+	echo src/libactionswf.so usr/lib/ >> debian/actionswf.install
+	echo oad/liboadbgdata.so usr/lib/ >> debian/actionswf.install
+
 	dh_auto_install -- prefix=/usr
-
-#override_dh_install:
-#	dh_install --list-missing -X.pyc -X.pyo
-
-#for a reason this is not working like otoc
-#override_dh_auto_configure:
-#	dh_auto_configure
-#	sed -i '/^oad/d' debian/actionswf.install
