--- a/debian/rules
+++ b/debian/rules
@@ -12,6 +12,8 @@ export DH_VERBOSE = 1
 override_dh_auto_install:
 	echo oad/oadbgdata.h usr/include/libactionswf/ > debian/libactionswf-dev.install
 	echo oad/oadbgdatas.h usr/include/libactionswf/ >> debian/libactionswf-dev.install
+	echo oad/oadbgdata.h.oh usr/include/libactionswf/ >> debian/libactionswf-dev.install
+	echo oad/oadbgdatas.h.oh usr/include/libactionswf/ >> debian/libactionswf-dev.install
 
 	#these must transition to otoc
 	#echo include/actionswf.h usr/include/libactionswf/ >> debian/libactionswf-dev.install
