--- a/debian/rules
+++ b/debian/rules
@@ -16,7 +16,7 @@ override_dh_auto_install:
 	echo oad/oadbgdatas.oh usr/include/libactionswf/ >> debian/libactionswf-dev.install
 	#
 	#these must transition to otoc
-	echo include/actionswf.h usr/include/libactionswf/ >> debian/libactionswf-dev.install
+	echo dev/actionswf.h usr/include/libactionswf/ >> debian/libactionswf-dev.install
 	#
 	echo dev/import.oh usr/include/libactionswf/ >> debian/libactionswf-dev.install
 	echo dev/importf.oh usr/include/libactionswf/ >> debian/libactionswf-dev.install
