flagpre_write_no flag_compressed

--- a/example/Makefile
+++ b/example/Makefile
@@ -56,11 +56,11 @@ lib:
 link:
 	if [ "${platform}" = "lin" ]; then \
 		if [ "${conv_64}" = "1" ]; then \
-			$(LD) ${linkerflags} -melf_i386 --dynamic-linker=/lib/ld-linux.so.2 ${name}.o -entry main -o ${name} -lc -L${_L} -l:${libname}; \
+			$(LD) ${linkerflags} -melf_i386 --dynamic-linker=/lib/ld-linux.so.2 ${name}.o -entry main -o ${name} -lc -lz -L${_L} -l:${libname}; \
 		elif [ -z "${ldprefer}" ]; then \
 			$(CC) ${linkerflags} ${name}.o -o ${name} -L${_L} -l:${libname}; \
 		else \
-			$(LD) ${linkerflags} --dynamic-linker=/lib64/ld-linux-x86-64.so.2 ${name}.o -entry main -o ${name} ${L} -lc -L${_L} -l:${libname}; \
+			$(LD) ${linkerflags} --dynamic-linker=/lib64/ld-linux-x86-64.so.2 ${name}.o -entry main -o ${name} ${L} -lc -lz -L${_L} -l:${libname}; \
 		fi \
 	else \
 		if [ "${conv_64}" = "1" ]; then \
@@ -82,7 +82,6 @@ exe:
 		WINEPATH=${_L} ${launcher} ./${name}.exe && \
 		WINEPATH=${_L} ${launcher} ./${name}.exe x; \
 	fi
-#\? is 0x3f log,alt,titles,x , inside -0x30, 0 is 0x30, \; to 0xb log,alt,x , = is 0xd log,titles,x
 
 %: %.oc
 	${OCOMP} $< ${OFLAGS} ${OFLAGSEXTRA}
