--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: actionswf
 Section: utils
 Priority: optional
 Maintainer: Botescu Costin <costin.botescu@gmail.com>
-Build-Depends: debhelper-compat (= 11), ocompiler, jpexs-decompiler
+Build-Depends: debhelper-compat (= 11), ocompiler, jpexs-decompiler, zlib1g
 #, ostriputil [amd64]
 Standards-Version: 4.5.0
 Homepage: https://github.com/colin-i/actionswf
@@ -10,7 +10,7 @@ Homepage: https://github.com/colin-i/actionswf
 Package: actionswf
 Architecture: amd64 i386
 Multi-Arch: foreign
-Depends: ${misc:Depends}, ${shlibs:Depends}
+Depends: ${misc:Depends}, ${shlibs:Depends}, zlib1g
 Description: Action Swf library
 
 Package: libactionswf-dev
