--- a/example/Makefile
+++ b/example/Makefile
@@ -54,13 +54,14 @@ lib:
 	fi
 
 link:
+	l_z=`pkg-config --libs zlib`; \
 	if [ "${platform}" = "lin" ]; then \
 		if [ "${conv_64}" = "1" ]; then \
-			$(LD) ${linkerflags} -melf_i386 --dynamic-linker=/lib/ld-linux.so.2 ${name}.o -entry main -o ${name} -lc -lz -L${_L} -l:${libname}; \
+			$(LD) ${linkerflags} -melf_i386 --dynamic-linker=/lib/ld-linux.so.2 ${name}.o -entry main -o ${name} -lc ${l_z} -L${_L} -l:${libname}; \
 		elif [ -z "${ldprefer}" ]; then \
-			$(CC) ${linkerflags} ${name}.o -o ${name} -lz -L${_L} -l:${libname}; \
+			$(CC) ${linkerflags} ${name}.o -o ${name} ${l_z} -L${_L} -l:${libname}; \
 		else \
-			$(LD) ${linkerflags} --dynamic-linker=/lib64/ld-linux-x86-64.so.2 ${name}.o -entry main -o ${name} ${L} -lc -lz -L${_L} -l:${libname}; \
+			$(LD) ${linkerflags} --dynamic-linker=/lib64/ld-linux-x86-64.so.2 ${name}.o -entry main -o ${name} ${L} -lc ${l_z} -L${_L} -l:${libname}; \
 		fi \
 	else \
 		if [ "${conv_64}" = "1" ]; then \
